[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.11.1"
